created to lower case function that is outputted into twitter handle lowercasehandle()

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                     <label for="">
                       what is your twitter handle  
                     </label>
-                    <input type="text" ng-model>
+                    <input type="text" ng-model="handle">
                 </div>
                 <hr />
-                <h1>twitter.com/</h1>
+                <h1>twitter.com/{{ lowercasehandle() }}</h1>
             </div>
             
 		
