added ng-click and click function to alert that button was clicked

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <div ng-controller="mainController">
             
                 <div>
+                  <input type="button" value="Click me" ng-click="alertClick()">  <br />
                     <label>What is your twitter handle?</label>
                     <input type="text" ng-model="handle" />
                 </div>
@@ -51,7 +52,7 @@
                 <h1>twitter.com/{{ lowercasehandle() }}</h1>
                 <h3>
                     <li ng-repeat="rule in rules">
-                        {{ rule.rulename }}
+                        {{ rule.rulename | uppercase }}
                     </li>
                 </h3>
                 
