created get request to handle success and errors

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                 
                 <h3>Rules</h3>
                 <ul>
-                    <li ng-repeat="rule in rules">
-                        {{ rule.RuleName }}
+                    <li ng-repeat="rule in name">
+                        {{ rule.name}}
                     </li>
                 </ul>
                 
