--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         {{ rule.name }}
                     </li>
                 </ul>
-                
+                Add rule: <input type="text" ng-model="newRule" />
             </div>
             
 		</div>
