--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
         <!-- load bootstrap and fontawesome via CDN -->
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
+        <script src="jquery-3.5.1.min.js"></script>
         <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <style>
             html, body, input, select, textarea
