--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <meta charset="UTF-8">
 
         <!-- load bootstrap and fontawesome via CDN -->
-        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
-        <script src="jquery-3.5.1.min.js"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+        
         <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <style>
             html, body, input, select, textarea
