--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         
         <!-- load angular via CDN -->
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+        
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/X.Y.Z/angular-route.js"
+        ></script>
         <script src="app.js"></script>
     </head>
     <body>
